--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -23,6 +24,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^5.52.0",
     "express": "^4.18.1",
     "mongoose": "^6.5.0"
   }
