--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starterkits",
+  "name": "mesto",
   "version": "1.0.0",
-  "description": "< Добавьте описание проекта в свободной форме >",
+  "description": "back mesto",
   "main": "dist/app.js",
   "scripts": {
     "lint": "npx eslint src/**/*.ts",
@@ -10,7 +10,7 @@
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "< Укажите здесь автора работы >",
+  "author": "veselov",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -26,6 +26,6 @@
   "dependencies": {
     "@typescript-eslint/parser": "^5.52.0",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0"
+    "mongoose": "^6.9.1"
   }
 }
