--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.21.0",
@@ -24,8 +25,14 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/validator": "^13.7.12",
     "@typescript-eslint/parser": "^5.52.0",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.1",
-    "mongoose": "^6.9.1"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "mongoose-bcrypt": "^1.10.1",
+    "validator": "^13.9.0"
   }
 }
