--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/validator": "^13.7.12",
     "@typescript-eslint/parser": "^5.52.0",
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
